--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 	<main id="main">
 		<div id="card-content">
 			<div id="card-content-image">
-				<img id="cube-image" src="cubo.png" alt="cubo.png">
+				<img id="cube-image" src="./images/image-equilibrium.jpg" alt="cubo.png">
 			</div>
 			<div id="card-content-paragraph">
 				<h1>Equilibrium #3429</h1>
 				<p>lorem dasdsasadsada sd fewtfgrgsfdf e ew rerfewf afafafafsdfsd</p>
 			</div>
 			<div id="card-content-extra">
-				<span class="icons"> <img src="#" alt="supremacia alienigena"></span>
-				<span class="icons"> <img src="#" alt="alien force"></span>
+				<span class="icons" id="icons-A"> <img class="image-icons" src="./images/icon-ethereum.svg" alt="supremacia alienigena">0.41ETH</span>
+				<span class="icons"> <img class="image-icons" src="./images/icon-clock.svg" alt="alien force">3 days left</span>
 			</div>
 			<div id="creator-area">
-			<span id="image-perfil"><img src="#" alt="perfil"></span>
-			<p><strong>Creation of </strong>Gustavo Castro</p>
+			<span id="image-perfil"><img id="image-profile" src="./images/image-avatar.png" alt="perfil"></span>
+			<p><strong>Creation of </strong> 	Gustavo Castro</p>
 			</div>
 		</div>
 	</main>
